--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "homepage": "https://github.com/grangerstats/granger-teste#readme",
       "dependencies": {
             "cors": "^2.8.5",
-            "express": "^4.17.1"
+            "express": "^4.17.1",
+            "nodemailer": "^6.4.10"
       },
       "devDependencies": {
             "nodemon": "^2.0.4"
